# aua-app/src/_assets/api.yml
@@ -415,3 +415,17 @@ paths:
       responses:
         200:
           description: OK
+  /recurring/:id/run:
+    post:
+      operationId: runRecurring
+      # security:
+      #   - authClient: []
+      parameters:
+        - name: id
+          in: path
+          type: string
+          format: uuid
+          required: true
+      responses:
+        200:
+          description: OK
